# cmake-tests-test-lib

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: test-lib.h
app/src/: main.c
lib/: CMakeLists.txt
lib/include/: a-library.h
lib/src/: a-library.c
